# git-mit

./: .dockerignore  .editorconfig  .fastconventional.yaml  .git-mit.toml.dist  .gitignore  .mergify.yml  .versio.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  Dockerfile  Justfile  LICENSE.md  Makefile  README.md  cliff.toml  cog.toml  installer.ps1  installer.sh  renovate.json  rustfmt.toml  specdown.toml
git-author/: Cargo.toml
git-author/tests/: e2e_able_to_list_version.rs  e2e_has_self_help.rs
git-authors/: Cargo.toml
git-authors/src/: main.rs
git-authors/tests/: e2e_able_to_list_version.rs  e2e_able_to_set_author_from_initial.rs  e2e_has_self_help.rs
git-mit/: Cargo.toml  build.rs
git-mit-config/: Cargo.toml  build.rs
git-mit-config/docs/: manpage.template.md
git-mit-config/manpage/: formatters.rs
git-mit-config/src/: cli.rs  errors.rs  lints.rs  main.rs
git-mit-config/src/cli/: app.rs  app_test.rs  mod.rs
git-mit-config/src/cmd/: author_example.rs  author_generate.rs  author_set.rs  author_status.rs  author_status_set.rs  lint_available.rs  lint_disable.rs  lint_enable.rs  lint_enabled.rs  lint_generate.rs  lint_status.rs  mod.rs  non_clean_behaviour.rs  non_clean_behaviour_set.rs  relates_to_template.rs  rotation.rs  rotation_set.rs
git-mit-config/tests/: e2e_has_self_help.rs
git-mit-install/: Cargo.toml  build.rs
git-mit-install/src/: cli.rs  errors.rs  main.rs
git-mit-install/src/cli/: app.rs  args.rs  args_test.rs  mod.rs
git-mit-install/src/hook/: dir.rs  install.rs  mod.rs  uninstall.rs
git-mit-relates-to/: Cargo.toml  build.rs
git-mit-relates-to/docs/: manpage.template.md
git-mit-relates-to/src/: cli.rs  errors.rs  main.rs
git-mit-relates-to/src/cli/: app.rs  app_test.rs  args.rs  args_test.rs  mod.rs
git-mit-relates-to/tests/: e2e_able_to_list_version.rs  e2e_able_to_relates_to_message.rs  e2e_has_self_help.rs
git-mit/completion/: generate.rs  mod.rs
git-mit/docs/: manpage.template.md
git-mit/man-template/: git-mit.1.md
git-mit/src/: cli.rs  errors.rs  main.rs
git-mit/src/cli/: app.rs  app_test.rs  args.rs  args_test.rs  mod.rs
git-mit/src/config/: author.rs  mod.rs
git-mit/tests/: e2e_able_to_list_version.rs  e2e_able_to_set_author_from_initial.rs  e2e_has_self_help.rs
mit-build-tools/: Cargo.toml
mit-build-tools/src/: lib.rs
mit-build-tools/src/completion/: generate.rs  mod.rs
mit-build-tools/src/manpage/: formatters.rs  generate.rs  mod.rs
mit-commit-message-lints/: Cargo.toml
mit-commit-message-lints/benches/: linting.rs  trailers.rs
mit-commit-message-lints/src/: errors.rs  lib.rs  scope.rs
mit-commit-message-lints/src/author/: entities.rs  mod.rs  serialize.rs  vcs.rs  yaml.rs
mit-commit-message-lints/src/console/: completion.rs  completion_test.rs  error_handling.rs  exit.rs  mod.rs  style.rs
mit-commit-message-lints/src/lints/: mod.rs
mit-commit-message-lints/src/lints/checks/: body_wider_than_72_characters.rs  duplicate_trailers.rs  missing_github_id.rs  missing_jira_issue_key.rs  missing_pivotal_tracker_id.rs  mod.rs  not_conventional_commit.rs  not_emoji_log.rs  subject_line_ends_with_period.rs  subject_longer_than_72_characters.rs  subject_not_capitalized.rs  subject_not_separate_from_body.rs  subject_not_seperate_from_body.rs
mit-commit-message-lints/src/lints/cmd/: errors.rs  lint.rs  mod.rs  read_lint_config.rs  set_status.rs  set_status_test.rs
mit-commit-message-lints/src/lints/lib/: body_wider_than_72_characters.rs  commit_message.rs  duplicate_trailers.rs  error.rs  lint.rs  lints.rs  mod.rs  problem.rs  (+11 more)
mit-commit-message-lints/src/mit/: mod.rs
mit-commit-message-lints/src/relates/: entities.rs  mod.rs  vcs.rs
mit-commit-msg/: Cargo.toml  build.rs
mit-commit-msg/docs/: manpage.template.md
mit-commit-msg/manpage/: mod.rs
mit-commit-msg/src/: cli.rs  errors.rs  main.rs
mit-commit-msg/tests/: e2e_able_to_list_version.rs  e2e_checks_if_there_are_no_duplicated_trailers.rs  e2e_checks_if_there_is_a_jira_issue_key.rs  e2e_checks_if_there_is_a_pivotal_tracker_id.rs  e2e_has_self_help.rs
mit-hook-test-helper/: Cargo.toml
mit-hook-test-helper/src/: lib.rs
mit-pre-commit/: Cargo.toml  build.rs
mit-pre-commit/manpage/: generate.rs
mit-pre-commit/src/: cli.rs  errors.rs  main.rs
mit-pre-commit/tests/: e2e_able_to_list_version.rs  e2e_fail_if_id_older_than_1_hour.rs  e2e_has_self_help.rs
mit-prepare-commit-msg/: Cargo.toml  build.rs
mit-prepare-commit-msg/docs/: manpage.template.md
mit-prepare-commit-msg/src/: cli.rs  errors.rs  main.rs
mit-prepare-commit-msg/tests/: e2e_able_to_list_version.rs  e2e_has_self_help.rs  e2e_tags_authors.rs
pb-commit-author/: Cargo.toml
pb-commit-author/src/: lib.rs
pb-commit-author/tests/: contract_able_to_load_config_from_git.rs
pb-commit-message-lints/: Cargo.toml
pb-commit-message-lints/src/: author.rs  config.rs  errors.rs  lib.rs  lints.rs
pb-commit-message-lints/src/author/: entities.rs  mod.rs  vcs.rs  yaml.rs
pb-commit-message-lints/src/lints/: duplicate_trailers.rs  missing_jira_issue_key.rs  missing_pivotal_tracker_id.rs  mod.rs
pb-commit-message-lints/tests/: contract_able_to_load_config_from_git.rs
pb-commit-msg/: Cargo.toml
pb-commit-msg/src/: main.rs
pb-commit-msg/tests/: able_to_list_version.rs  checks_if_there_are_no_duplicated_trailers.rs  e2e_able_to_list_version.rs  e2e_checks_if_there_are_no_duplicated_trailers.rs  e2e_checks_if_there_is_a_jira_issue_key.rs  e2e_checks_if_there_is_a_pivotal_tracker_id.rs  e2e_has_self_help.rs
pb-git-hooks/: Cargo.toml
pb-git-hooks/src/: lints.rs  main.rs
pb-git-hooks/tests/: e2e_has_self_help.rs
pb-pre-commit/: Cargo.toml
pb-pre-commit/src/: main.rs
pb-pre-commit/tests/: able_to_list_version.rs  e2e_able_to_list_version.rs  e2e_fail_if_id_older_than_1_hour.rs  e2e_has_self_help.rs
pb-prepare-commit-msg/: Cargo.toml
pb-prepare-commit-msg/src/: main.rs
pb-prepare-commit-msg/tests/: able_to_list_version.rs  e2e_able_to_list_version.rs  e2e_has_self_help.rs  e2e_tags_authors.rs  has_self_help.rs
(+156 files in other folders)
