[workspace]
members = ["git-mit-config", "git-mit-install", "mit-prepare-commit-msg", "mit-pre-commit", "mit-commit-msg", "mit-commit-message-lints", "mit-hook-test-helper", "git-mit", "git-mit-relates-to"]
resolver = "3"

[workspace.package]
edition = "2024"
[profile.release-max]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
strip = "symbols"
