[package]
name = "git-author"
version = "2.35.0"
authors = ["Billie Thompson <billie+git-author@billiecodes.com>"]
edition = "2018"
license = "Creative Commons Zero v1.0 Universal"
description = "Set author and Co-authored trailer."
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "git-hooks"]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"

[dependencies]
clap = "~2.33"

[dev-dependencies]
itertools = "0.9.0"
pretty_assertions = "0.6.1"
tempfile = "3"
pb-hook-test-helper = { path = "../pb-hook-test-helper" }
