[package]
name = "git-authors"
version = "2.144.0"
authors = [ "Billie Thompson <billie+git-author@billiecodes.com>" ]
edition = "2018"
license = "Creative Commons Zero v1.0 Universal"
description = "Set author and Co-authored trailer."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"

[dependencies]
clap = "~2.33"
xdg = "^2.1"
git2 = "0.13"

  [dependencies.pb-commit-message-lints]
  path = "../pb-commit-message-lints"

[dev-dependencies]
indoc = "0.3"
tempfile = "3"

  [dev-dependencies.pb-hook-test-helper]
  path = "../pb-hook-test-helper"
