[package]
name = "git-mit-config"
version = "6.0.1"
authors = [ "Billie Thompson <billie+git-mit-config@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"
description = "A command for enabling and disabling git lints"

[dependencies]
mit-lint = "3.2.9"
thiserror = "2.0.0"
miette = { version = "7.4.0", features = [ "fancy" ] }
git2 = "0.20.0"
openssl = { version = "0.10.68", optional = true }
clap_complete = "4.5.42"
clap = { version = "4.5.26", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }


  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.0.1"

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]
