[package]
name = "git-mit-config"
version = "6.3.0"
authors = [ "Billie Thompson <billie+git-mit-config@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"
description = "A command for enabling and disabling git lints"

[dependencies]
mit-lint = "3.4.1"
thiserror = "2.0.18"
miette = { version = "7.6.0", features = [ "fancy" ] }
git2 = "0.21.0"
openssl = { version = "0.10.81", optional = true }
clap_complete = "4.6.5"
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }


  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.3.0"

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]
