[package]
name = "git-mit-install"
version = "6.0.8"
authors = [ "Billie Thompson <billie+git-mit-install@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
description = "Install git-mit into a repository"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
which = "8.0.0"
thiserror = "2.0.0"
miette = { version = "7.4.0", features = [ "fancy" ] }
clap_complete = "4.5.42"
clap = { version = "4.5.26", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }


git2 = "0.20.0"
openssl = { version = "0.10.68", optional = true }

indoc = "2.0.5"

  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.0.8"

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]
