[package]
name = "git-mit-relates-to"
version = "6.0.4"
authors = [
  "Billie Thompson <billie+git-mit-relates-to@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
description = "Set Relates-to trailer."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
thiserror = "2.0.0"
miette = { version = "7.4.0", features = [ "fancy" ] }
clap_complete = "4.5.42"
clap = { version = "4.5.26", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
git2 = "0.20.0"
openssl = { version = "0.10.68", optional = true }


  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.0.4"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
