[package]
name = "git-mit-relates-to"
version = "6.4.1"
authors = [
  "Billie Thompson <billie+git-mit-relates-to@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
description = "Set Relates-to trailer."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
thiserror = "2.0.18"
miette = { version = "7.6.0", features = [ "fancy" ] }
clap_complete = "4.6.5"
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
git2 = "0.21.0"
openssl = { version = "0.10.81", optional = true }


  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.4.1"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
