[package]
name = "git-mit"
version = "5.14.8"
authors = [ "Billie Thompson <billie+git-mit@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
description = "Set author and Co-authored trailer."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
shell-words = "1.1.0"
indoc = "2.0.5"
thiserror = "2.0.0"
miette = { version = "7.4.0", features = [ "fancy" ] }
clap_complete = "4.5.42"
clap = { version = "4.5.26", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
git2 = "0.20.0"
openssl = { version = "0.10.68", optional = true }


  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "5.14.8"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.15.0"

  [dev-dependencies.mit-hook-test-helper]
  path = "../mit-hook-test-helper"
version = "5.14.8"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
