[package]
name = "git-mit"
version = "6.4.3"
authors = ["Billie Thompson <billie+git-mit@billiecodes.com>"]
description = "Set author and Co-authored trailer."
readme = "../README.md"
keywords = ["git", "git-hooks"]
categories = ["development-tools", "command-line-utilities"]
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/git-mit"

[package.edition]
workspace = true

[dependencies]
clap_complete = "4"
git2 = "0.21"
indoc = "2"
thiserror = "2"

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "wrap_help", "env", "unicode"]

[dependencies.miette]
version = "7"
features = ["fancy"]

[dependencies.mit-commit-message-lints]
version = "6"
path = "../mit-commit-message-lints"

[dependencies.openssl]
version = "0.10"
optional = true

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[[bin]]
path = "src/main.rs"
name = "git-mit"
required-features = []
