[package]
name = "mit-build-tools"
version = "5.10.1"
authors = [
  "Billie Thompson <billie+mit-build-tools@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "manpages", "completion" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"
description = "Generate different things from a clap app file"

[dependencies]
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.4"


tinytemplate = "1.2.1"
serde_json = "1.0.68"
serde_derive = "1.0.125"


  [dependencies.serde]
  version = "1.0.125"
  features = [ "derive" ]
