[package]
name = "mit-commit-message-lints"
version = "6.0.4"
authors = [
  "Billie Thompson <billie+mit-commit-message-lints@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"
description = "Check the correctness of a specific commit message. Designed to be used in tools providing commit-msg style hooks"

[dependencies]
shell-words = "1.1.0"
glob = "0.3.2"
thiserror = "2.0.0"
miette = { version = "7.4.0", features = [ "fancy" ] }
git2 = "0.20.0"
openssl = { version = "0.10.68", optional = true }
serde_yaml = "0.9.34"
indoc = "2.0.5"
toml = "0.8.19"
mit-commit = "3.3.1"
mit-lint = "3.4.0"
comfy-table = "7.1.3"
clap = { version = "4.5.26", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
time = "0.3.41"


[dependencies.serde]
version = "1.0.217"
features = [ "derive" ]

[dev-dependencies]
criterion = "0.6.0"


[[bench]]
name = "trailers"
harness = false

[features]
default = []
vendored-openssl = ["openssl/vendored"]
