[package]
name = "mit-commit-message-lints"
version = "6.4.1"
authors = [
  "Billie Thompson <billie+mit-commit-message-lints@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"
description = "Check the correctness of a specific commit message. Designed to be used in tools providing commit-msg style hooks"

[dependencies]
shell-words = "1.1.1"
glob = "0.3.3"
thiserror = "2.0.18"
miette = { version = "7.6.0", features = [ "fancy" ] }
git2 = "0.21.0"
openssl = { version = "0.10.81", optional = true }
rand = "0.10.1"
serde_yaml = "0.9.34"
indoc = "2.0.7"
toml = "1.1.2"
mit-commit = "3"
mit-lint = "4"
comfy-table = "7.2.2"
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
time = "0.3.49"


[dependencies.serde]
version = "1.0.228"
features = [ "derive" ]

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.27.0"


[[bench]]
name = "trailers"
harness = false

[features]
default = []
vendored-openssl = ["openssl/vendored"]