[package]
name = "mit-commit-message-lints"
version = "6.5.0"
authors = ["Billie Thompson <billie+mit-commit-message-lints@billiecodes.com>"]
description = "Check the correctness of a specific commit message. Designed to be used in tools providing commit-msg style hooks"
readme = "../README.md"
keywords = ["git", "git-hooks"]
categories = ["development-tools", "command-line-utilities"]
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/git-mit"

[package.edition]
workspace = true

[dependencies]
comfy-table = "7"
git2 = "0.21"
glob = "0.3"
indoc = "2"
mit-commit = "3"
mit-lint = "4"
rand = "0.10"
serde_yaml = "0.9"
shell-words = "1"
thiserror = "2"
time = "0.3"
toml = "1"

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "wrap_help", "env", "unicode"]

[dependencies.miette]
version = "7"
features = ["fancy"]

[dependencies.openssl]
version = "0.10"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
criterion = "=0.8.2"
tempfile = "=3.27.0"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[[bench]]
path = "benches/trailers.rs"
name = "trailers"
harness = false
required-features = []

[lib]
path = "src/lib.rs"
name = "mit_commit_message_lints"
required-features = []
crate-type = ["lib"]
