[package]
name = "mit-commit-msg"
version = "6.4.1"
authors = [ "Billie Thompson <billie+mit-commit-msg@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
description = "Validate the commit message that a user has input"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
mit-lint = "3.4.1"
clap_complete = "4.6.5"
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
openssl = { version = "0.10.81", optional = true }
miette = { version = "7.6.0", features = [ "fancy" ] }
mit-commit = "3.3.2"

arboard = "3.6.1"

  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.4.1"

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]
