[package]
name = "mit-commit-msg"
version = "6.4.1"
authors = [ "Billie Thompson <billie+mit-commit-msg@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
description = "Validate the commit message that a user has input"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
mit-lint = "4"
clap_complete = "4"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
openssl = { version = "0.10", optional = true }
miette = { version = "7", features = [ "fancy" ] }
mit-commit = "3"

arboard = "3"

  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6"

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]
