[package]
name = "mit-commit-msg"
version = "6.5.2"
authors = ["Billie Thompson <billie+mit-commit-msg@billiecodes.com>"]
description = "Validate the commit message that a user has input"
readme = "../README.md"
keywords = ["git", "git-hooks"]
categories = ["development-tools", "command-line-utilities"]
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/git-mit"

[package.edition]
workspace = true

[dependencies]
arboard = "3"
clap_complete = "4"
mit-commit = "3"
mit-lint = "4"
thiserror = "2"

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "wrap_help", "env", "unicode"]

[dependencies.miette]
version = "7"
features = ["fancy"]

[dependencies.mit-commit-message-lints]
version = "6"
path = "../mit-commit-message-lints"

[dependencies.openssl]
version = "0.10"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[[bin]]
path = "src/main.rs"
name = "mit-commit-msg"
required-features = []
