[package]
name = "mit-hook-test-helper"
version = "6.0.1"
authors = [
  "Billie Thompson <billie+mit-hook-test-helper@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"
description = "Testing help tools for git-mit"

[dependencies]
tempfile = "3.15.0"
git2 = "0.20.0"
openssl = { version = "0.10.68", optional = true }



[features]
default = []
vendored-openssl = ["openssl/vendored"]
