[package]
name = "mit-hook-test-helper"
version = "6.4.2"
authors = ["Billie Thompson <billie+mit-hook-test-helper@billiecodes.com>"]
description = "Testing help tools for git-mit"
readme = "../README.md"
keywords = ["git", "git-hooks"]
categories = ["development-tools", "command-line-utilities"]
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/git-mit"

[package.edition]
workspace = true

[dependencies]
git2 = "0.21"
tempfile = "3"

[dependencies.openssl]
version = "0.10"
optional = true

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[lib]
path = "src/lib.rs"
name = "mit_hook_test_helper"
required-features = []
crate-type = ["lib"]
