[package]
name = "mit-pre-commit"
version = "6.4.1"
authors = [ "Billie Thompson <billie+mit-pre-commit@billiecodes.com>" ]
edition = "2018"
license = "CC0-1.0"
description = "Run first, before you even type in a commit message. It's used to inspect the snapshot that's about to be committed."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
time = { version = "0.3", features = ["local-offset"] }
thiserror = "2"
miette = { version = "7", features = [ "fancy" ] }
clap_complete = "4"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
openssl = { version = "0.10", optional = true }



  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6"

[features]
default = []
vendored-openssl = ["openssl/vendored"]


[dev-dependencies]
