[package]
name = "mit-pre-commit"
version = "6.4.2"
authors = ["Billie Thompson <billie+mit-pre-commit@billiecodes.com>"]
description = "Run first, before you even type in a commit message. It's used to inspect the snapshot that's about to be committed."
readme = "../README.md"
keywords = ["git", "git-hooks"]
categories = ["development-tools", "command-line-utilities"]
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/git-mit"

[package.edition]
workspace = true

[dependencies]
clap_complete = "4"
thiserror = "2"

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "wrap_help", "env", "unicode"]

[dependencies.miette]
version = "7"
features = ["fancy"]

[dependencies.mit-commit-message-lints]
version = "6"
path = "../mit-commit-message-lints"

[dependencies.openssl]
version = "0.10"
optional = true

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[dev-dependencies]

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[[bin]]
path = "src/main.rs"
name = "mit-pre-commit"
required-features = []
