[package]
name = "mit-prepare-commit-msg"
version = "6.3.0"
authors = [
  "Billie Thompson <billie+mit-prepare-commit-msg@billiecodes.com>"
]
edition = "2018"
license = "CC0-1.0"
description = "This hook is invoked by git-commit right after preparing the default log message, and before the editor is started."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/git-mit"

[dependencies]
tinytemplate = "1.2.1"
thiserror = "2.0.18"
miette = { version = "7.6.0", features = [ "fancy" ] }
shell-words = "1.1.1"
clap_complete = "4.6.5"
clap = { version = "4.6.1", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
openssl = { version = "0.10.81", optional = true }
mit-commit = "3.3.2"



  [dependencies.serde]
version = "1.0.228"
features = [ "derive" ]

  [dependencies.mit-commit-message-lints]
  path = "../mit-commit-message-lints"
version = "6.3.0"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
