[package]
name = "pb-commit-author"
version = "2.32.0"
authors = ["Billie Thompson <billie+pb-commit-author@billiecodes.com>"]
edition = "2018"
license = "CC0 1.0 Universal"
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "git-hooks"]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"
description = "Set the author of a commit message. Designed to be used in tools providing tooling to be used with git repositories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
regex = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "0.6.1"
pb-hook-test-helper = { path = "../pb-hook-test-helper" }
