[package]
name = "pb-commit-message-lints"
version = "2.6.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "0.6.1"
