[package]
name = "pb-commit-msg"
version = "1.0.0"
authors = ["Billie Thompson <billie+pb-commit-msg@billiecodes.com>"]
edition = "2018"
license = "Creative Commons Zero v1.0 Universal"
description = "Validate the commit message that a user has input"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
[dev-dependencies]
itertools = "0.9.0"
