[package]
name = "pb-commit-msg"
version = "2.113.0"
authors = [ "Billie Thompson <billie+pb-commit-msg@billiecodes.com>" ]
edition = "2018"
license = "Creative Commons Zero v1.0 Universal"
description = "Validate the commit message that a user has input"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"

[dependencies]
clap = "~2.33"
git2 = "0.13"
itertools = "0.9.0"

  [dependencies.pb-commit-message-lints]
  path = "../pb-commit-message-lints"

[dev-dependencies]
itertools = "0.9.0"
tempfile = "3"
pretty_assertions = "0.6.1"

  [dev-dependencies.pb-hook-test-helper]
  path = "../pb-hook-test-helper"
