[package]
name = "pb-git-hooks"
version = "2.119.0"
authors = [ "Billie Thompson <billie+pb-git-hooks@billiecodes.com>" ]
edition = "2018"
license = "CC0 1.0 Universal"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"
description = "A command for enabling and disabling git lints"

[dependencies]
git2 = "0.13"
clap = "~2.33"

  [dependencies.pb-commit-message-lints]
  path = "../pb-commit-message-lints"

[dev-dependencies]
pretty_assertions = "0.6.1"

  [dev-dependencies.pb-hook-test-helper]
  path = "../pb-hook-test-helper"
