[package]
name = "pb-pre-commit"
version = "2.147.0"
authors = [ "Billie Thompson <billie+pb-pre-commit@billiecodes.com>" ]
edition = "2018"
license = "Creative Commons Zero v1.0 Universal"
description = "Run first, before you even type in a commit message. It's used to inspect the snapshot that's about to be committed."
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "git", "git-hooks" ]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"

[dependencies]
clap = "~2.33"
git2 = "0.13"

  [dependencies.pb-commit-message-lints]
  path = "../pb-commit-message-lints"

[dev-dependencies]
indoc = "0.3"
pretty_assertions = "0.6.1"

  [dev-dependencies.pb-hook-test-helper]
  path = "../pb-hook-test-helper"
