[package]
name = "pb-prepare-commit-msg"
version = "2.41.0"
authors = ["Billie Thompson <billie+pb-prepare-commit-msg@billiecodes.com>"]
edition = "2018"
license = "Creative Commons Zero v1.0 Universal"
description = "This hook is invoked by git-commit right after preparing the default log message, and before the editor is started."
categories = ["development-tools", "command-line-utilities"]
keywords = ["git", "git-hooks"]
readme = "../README.md"
repository = "https://github.com/PurpleBooth/pb-git-hooks"

[dependencies]
clap = "~2.33"
git2 = "0.13"
pb-commit-message-lints = { path = "../pb-commit-message-lints" }
itertools = "0.9.0"

[dev-dependencies]
itertools = "0.9.0"
pretty_assertions = "0.6.1"
tempfile = "3"
pb-hook-test-helper = { path = "../pb-hook-test-helper" }
